# prime

./: .gitignore  AGENTS.md  Cargo.toml  README.md
src/: account.rs  account_transfer.rs  http_error.rs  image_cache.rs  launch.rs  lib.rs  main.rs  storage.rs  ui.rs  updater.rs
src/riot/: auth.rs  client.rs  content.rs  endpoints.rs  launcher_session.rs  mod.rs  models.rs
src/ui/: app.rs  components.rs  data.rs  mod.rs  shell.rs  tests.rs
src/ui/screens/: accounts.rs  loadout.rs  mod.rs  settings.rs  shop.rs
