[package]
name = "prime-valorant-manager"
version = "0.1.0"
edition = "2024"

[dependencies]
directories = "6"
iced = { version = "0.14", features = ["image", "tokio"] }
reqwest = { version = "0.12", default-features = false, features = ["cookies", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
time = { version = "0.3", features = ["formatting", "serde"] }
tokio = { version = "1", features = ["time"] }
url = "2"
uuid = { version = "1", features = ["serde", "v4"] }

[dev-dependencies]
tempfile = "3"
