[package]
name = "prime"
version = "0.1.5"
edition = "2024"

[features]
default = []
image-viewer-testing = []

[dependencies]
base64 = "0.22.1"
directories = "6.0.0"
iced = { version = "0.14.0", features = ["advanced", "image", "tokio"] }
reqwest = { version = "0.13.4", default-features = false, features = ["cookies", "json", "rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
time = { version = "0.3.47", features = ["formatting", "local-offset", "parsing", "serde"] }
tokio = { version = "1.52.3", features = ["time"] }
url = "2.5.8"
uuid = { version = "1.23.1", features = ["serde", "v4"] }
velopack = "1.0.7-ga630726"
windows-sys = { version = "0.61.2", features = ["Win32_Storage_FileSystem"] }

[dev-dependencies]
tempfile = "3.27.0"

[profile.release]
opt-level = "z"
strip = true
lto = true
codegen-units = 1
panic = "abort"
